nats/kubernetes/x-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nats-service-x
  name: nats-service-x
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats-service-x
  template:
    metadata:
      labels:
        app: nats-service-x
    spec:
      containers:
        - name: nats-service-x
          image: quay.io/nlembers/nats/nats-service-x:1.0
          imagePullPolicy: Always
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
