nats/kubernetes/a-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nats-service-a
  name: nats-service-a
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nats-service-a
  template:
    metadata:
      labels:
        app: nats-service-a
    spec:
      containers:
        - name: nats-service-a
          image: quay.io/nlembers/nats/nats-service-a:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nats-service-a
  name: nats-service-a
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: nats-service-a

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nats-service-a
  name: nats-service-a
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: nats-service-a
